force-app/main/default/objects/ProductBundleItem__c/ProductBundleItem__c.object-meta.xml
<CustomObject>
    <label>Entrée de produit commercial</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entrées de produit commercial</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>