force-app/main/default/objects/ProductBundleItem__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>ChildProduct__r.IsActive</formula>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>