force-app/main/default/objects/ProductBundleItem__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>TEXT(ChildProduct__r.Category__c)</formula>
    <label>Catégorie</label>
    <type>Text</type>
</CustomField>