force-app/main/default/objects/ProductBundleItem__c/fields/ChildProduct__c.field-meta.xml
<CustomField>
    <fullName>ChildProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit d&apos;opération</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordTypeId</field>
            <operation>equals</operation>
            <value>Produit d&apos;opération</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Entrées de produit d&apos;opération</relationshipLabel>
    <relationshipName>Product_Bundle_Items</relationshipName>
    <type>Lookup</type>
</CustomField>