force-app/main/default/objects/ProductBundleItem__c/fields/Medium__c.field-meta.xml
<CustomField>
    <fullName>Medium__c</fullName>
    <formula>TEXT( ChildProduct__r.Medium__c )</formula>
    <label>Support</label>
    <type>Text</type>
</CustomField>