force-app/main/default/objects/ProductBundleItem__c/fields/ParentProduct__c.field-meta.xml
<CustomField>
    <fullName>ParentProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit commercial</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordTypeId</field>
            <operation>equals</operation>
            <value>Produit commercial</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Entrées de produit commercial</relationshipLabel>
    <relationshipName>packageProducts</relationshipName>
    <type>Lookup</type>
</CustomField>