force-app/main/default/objects/ProductBundleItem__c/fields/PricingModel__c.field-meta.xml
<CustomField>
    <fullName>PricingModel__c</fullName>
    <formula>TEXT( ChildProduct__r.PricingModel__c )</formula>
    <label>Mode de com</label>
    <type>Text</type>
</CustomField>