force-app/main/default/objects/ProductBundleItem__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <formula>ChildProduct__r.Rate__c</formula>
    <label>Taux Régie</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>