force-app/main/default/objects/ProductBundleItem__c/fields/Targeting__c.field-meta.xml
<CustomField>
    <fullName>Targeting__c</fullName>
    <formula>TEXT( ChildProduct__r.Targeting__c )</formula>
    <label>Ciblage</label>
    <type>Text</type>
</CustomField>